syntax = "proto3";

package guru.qa.grpc.rococo;

option java_multiple_files = true;
option java_package = "guru.qa.grpc.rococo.grpc";
option java_outer_classname = "RococoUserProto";

service RococoUserService{
  rpc GetUser(UserRequest) returns (User){}
  rpc UpdateUser(User) returns (User){}
}

message UserRequest{
  string username = 1;
}

message User {
  string id = 1;
  string username = 2;
  string firstname = 3;
  string lastname = 4;
  string avatar = 5;

}
